Update .gitignore to track output and dataset directories
- Commented out output/, *.png, *.wav ignores
- Now tracking analysis results and audio files
- Makes project ready for submission with all results included
- Easier to demonstrate and share complete project

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,14 @@ env/
 venv/
 ENV/
 
-# Output directories
-output/
-recordings/
-*.png
-*.wav
+# Output directories - Now tracking these for assignment submission
+# output/
+# recordings/
+# *.png
+# *.wav
+
+# Note: Keeping output and dataset directories in version control
+# for easy project demonstration and submission
 
 # IDE
 .vscode/
